package com.example.shapes;

/**
 * Interfejs reprezentujący ogólny kształt.
 */
public interface Shape {
    /**
     * Oblicza pole powierzchni figury.
     *
     * @return pole powierzchni
     */
    double calculateArea();
}
